Updated media query in style.css to fix display issue on iphone and ipad while viewing on landscape mode.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 /*-------------------Buttons-----------------*/
 
 .btn-info {
-  border: 2px solid var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
   border-radius: 10px;
   margin-bottom: 10px;
 }
@@ -63,38 +63,42 @@ body {
   margin-right: 3%;
   margin-left: 3%;
   height: auto;
-  border: 2px solid var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 1em;
   color: #000000;
   font-weight: 600;
 }
 
 .btn--signUp {
   margin-bottom: 5%;
-  border: 2px solid var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
   border-radius: 10px;
 }
 
 .btn--cta {
   margin: 0 auto;
   width: auto;
-  border: 2px solid var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
   border-radius: 10px;
   transform: translate(5%, 45%);
   display: block;
 }
 
-.btn--dot{
+.btn--dot {
   margin-left: -6px;
+  border: 1px solid var(--secondary) !important;
+  border-radius: 10px;
+  font-size: 80%;
 }
 
-.btn-join{
-    margin-right: auto;
+.btn-join {
+  margin-right: auto;
 }
 /*------Hover--------*/
 
 .btn--cta:hover,
+.btn--dot:hover,
 .btn--signUp:hover,
 .btn-home:hover,
 .btn-info:hover {
@@ -107,8 +111,8 @@ body {
   color: #009b83;
 }
 
-input[type="submit"]:hover{
-    background: #009b83;
+input[type="submit"]:hover {
+  background: #009b83;
 }
 
 /*-----------------------Navigation---------------*/
@@ -299,7 +303,7 @@ input[type="submit"]:hover{
   list-style: none;
 }
 
-.list-inline-social a  {
+.list-inline-social a {
   text-decoration: none;
 }
 
@@ -473,7 +477,7 @@ input[type="submit"] {
   color: white;
   padding: 10px 10px;
   border-radius: 10px;
-  border: 2px solid var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
   cursor: pointer;
   margin-top: 20px;
   margin-bottom: 16px;
@@ -572,49 +576,90 @@ input[type="checkbox"] {
   border: 2px solid #525252;
 }
 
-.contactModal{
-background: #fafafa;
-margin-top: 80%;
+.contactModal {
+  background: #fafafa;
+  margin-top: 80%;
 }
 /*----------------------------------------@media---------------------------------*/
-
-@media only screen and (orientation: landscape) {
-  /* .navbar .navbar-brand{
-      font-size: 10px;
-  }   */
-
-  /* .navbar-light .navbar-nav .nav-link {
-    font-size: 9px;
-  } */
-
-.small-text {
-    font-size: 9px;
-}
-
+@media (min-width: 1024px) and (max-width: 1024px) {
   .jumbotron-title {
-    font-size: large;
-}
-
-.small-text {
-    font-size: 10px;
-}
-
-
-  .intro img{
-    width: 6em;
-    height: 7em;
-    display: none;
- }
-}
-
-@media screen and (max-width: 325px) {
-  .heading-about,
-  .heading-main {
-    margin-top: 90px;
+    font-size: 60px;
   }
 
-  .joinUsForm {
-    margin-top: 90px;
+  .small-text {
+    font-size: 28px;
+  }
+
+  .intro img {
+    width: 21em;
+    height: 22em;
+  }
+
+  .btn-home {
+    height: 50px;
+    width: 120px;
+    padding: 7px;
+    font-size: 140%;
+  }
+
+  .about-container,
+  .founder-row,
+  .clarity-row {
+    margin-top: 9%;
+    margin-bottom: 4%;
+  }
+  .media-row {
+    margin-top: 6%;
+    margin-bottom: 4%;
+  }
+
+  .appeal-container {
+    margin-top: 16%;
+    margin-bottom: 16%;
+  }
+
+  #content-4 {
+    margin-top: 4px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .action-heading,
+  .action-sub-heading {
+    font-size: 110%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .action-heading {
+    font-size: 95%;
+  }
+  .action-sub-heading {
+    font-size: 95%;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 800px) {
+  .appeal-container {
+    margin-top: 15%;
+    margin-bottom: 6%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .clarity-col {
+    margin-bottom: 5%;
+    margin-top: 5%;
+  }
+
+  .heading-gallery {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 768px) {
+  .media-row {
+    margin-bottom: 3%;
   }
 }
 
@@ -674,77 +719,37 @@ margin-top: 80%;
   }
 }
 
-@media (min-width: 768px) and (max-width: 768px) {
-  .media-row {
-    margin-bottom: 3%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .clarity-col {
-    margin-bottom: 5%;
-    margin-top: 5%;
-  }
-
-  .heading-gallery {
-    font-size: 12px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 992px) {
-  .action-heading {
-    font-size: 95%;
-  }
-  .action-sub-heading {
-    font-size: 95%;
-  }
-}
-
-@media (min-width: 1024px) and (max-width: 1024px) {
-  .jumbotron-title {
-    font-size: 60px;
-  }
-
-  .small-text {
-    font-size: 28px;
-  }
-
+@media screen and (max-height: 768px) {
   .intro img {
-    width: 21em;
-    height: 22em;
-  }
-
-  .btn-home {
-    height: 50px;
-    width: 120px;
-    padding: 7px;
-    font-size: 140%;
-  }
-
-  .about-container,
-  .founder-row,
-  .clarity-row {
-    margin-top: 9%;
-    margin-bottom: 4%;
-  }
-  .media-row {
-    margin-top: 6%;
-    margin-bottom: 4%;
-  }
-
-  .appeal-container {
-    margin-top: 16%;
-    margin-bottom: 16%;
-  }
-
-  #content-4 {
-    margin-top: 4px;
+    width: 12em;
+    height: 13em;
+    margin-top: 10%;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .action-heading,
-  .action-sub-heading {
-    font-size: 110%;
+@media screen and (max-height: 414px) {
+  .intro img {
+    display: none;
+  }
+
+  .jumbotron-title {
+    margin-top: 20%;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .heading-about,
+  .heading-main {
+    margin-top: 90px;
+  }
+}
+
+@media screen and (max-width: 240px) {
+  .navbar .navbar-brand {
+    font-size: 10px;
+  }
+
+  .navbar-light .navbar-nav .nav-link {
+    font-size: 9px;
   }
 }
